[package]
name = "aswwisftd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wtftd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
